--- a/SparkasseCSVexportParser/SparkasseCSVexportParser.csproj
+++ b/SparkasseCSVexportParser/SparkasseCSVexportParser.csproj
@@ -54,6 +54,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchOccurrForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SearchOccurrForm.Designer.cs">
+      <DependentUpon>SearchOccurrForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SparkasseEntry.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -67,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SearchOccurrForm.resx">
+      <DependentUpon>SearchOccurrForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
